--- a/app/src/main/res/layout/delegate_doctor_schedule.xml
+++ b/app/src/main/res/layout/delegate_doctor_schedule.xml
@@ -25,8 +25,10 @@
                 android:layout_height="1dp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_toEndOf="@+id/start_time"
+                android:layout_toRightOf="@+id/start_time"
                 android:background="@android:color/black" />
 
             <TextView
@@ -34,7 +36,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_toEndOf="@+id/view_" />
+                android:layout_marginLeft="15dp"
+                android:layout_toEndOf="@+id/view_"
+                android:layout_toRightOf="@+id/view_"/>
 
         </RelativeLayout>
 
@@ -44,8 +48,10 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/relativeLayout"
             android:layout_alignBottom="@+id/relativeLayout"
+            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="27dp"
+            android:layout_marginRight="27dp"
             android:button="@drawable/circular_checkbox"
             />
 
