fix upload freeze

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#C6C6C6</color>
     <color name="header_background">#4A4A4A</color>
     <color name="buttonColor">#FF5252</color>
+    <color name="progressbar_background">#FF5252</color>
     <color name="orange">#FFA500</color>
     <color name="date_background">#4A4A4A</color>
     <color name="search_background">#737579</color>
